[project]
name = "db-manager"
version = "0.1.0"
description = "DB manager for PostgreSQL on docker instances"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "psycopg2-binary>=2.9.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "psycopg2>=2.9.10",
    "ruff>=0.7.3",
]

[project.scripts]
db_manager = "db_manager:main"

